Changes made in index.html Page

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 			</div>
 		</section>
 
-		<!-- Footer Section -->
+		<!-- Footer Sections -->
 		<footer class="footer">
 			<p>Your E-commerce Store. All rights reserved.</p>
 		</footer>
