--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				</div>
 				<ul class="nav-links">
 					<li><a href="#">Home</a></li>
-					<li><a href="#">Shop</a></li>
+					<li><a href="cart.html">Shop</a></li>
 					<li><a href="#">About</a></li>
 					<li><a href="#">Contact</a></li>
 					<li><a href="signup-signin.html">Login</a></li>
