--- a/signup-signin.html
+++ b/signup-signin.html
@@ -5,6 +5,46 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Sign Up / Sign In</title>
 		<link rel="stylesheet" href="signUp.css" />
+		<script>
+			// Function for client-side validation
+			function validateForm(event) {
+				const form = event.target;
+				const email = form.querySelector('input[name="email"]').value;
+				const password = form.querySelector('input[name="password"]').value;
+
+				if (form.id === 'signup-form') {
+					const confirmPassword = form.querySelector(
+						'input[name="confirmPassword"]'
+					).value;
+
+					if (password !== confirmPassword) {
+						alert('Passwords do not match');
+						event.preventDefault(); // Prevent form submission
+						return false;
+					}
+
+					// Store user details in localStorage
+					localStorage.setItem('userEmail', email);
+					localStorage.setItem('userPassword', password);
+					alert('Sign up successful!');
+				}
+
+				if (form.id === 'signin-form') {
+					const storedEmail = localStorage.getItem('userEmail');
+					const storedPassword = localStorage.getItem('userPassword');
+
+					if (email !== storedEmail || password !== storedPassword) {
+						alert('Invalid email or password');
+						event.preventDefault(); // Prevent form submission
+						return false;
+					}
+
+					alert('Sign in successful!');
+				}
+
+				return true;
+			}
+		</script>
 	</head>
 	<body class="form-body">
 		<div class="form-container">
@@ -18,7 +58,7 @@
 			<!-- Signin Form -->
 			<div class="form signin-form">
 				<h2>Sign In</h2>
-				<form action="#" method="POST">
+				<form action="#" method="POST" onsubmit="return validateForm(event)">
 					<input type="text" name="username" placeholder="Username" required />
 					<input
 						type="password"
@@ -37,7 +77,7 @@
 			<!-- Signup Form -->
 			<div class="form signup-form">
 				<h2>Sign Up</h2>
-				<form action="#" method="POST">
+				<form action="#" method="POST" onsubmit="return validateForm(event)">
 					<input type="text" name="fullname" placeholder="Full Name" required />
 					<input
 						type="email"
