asynchronous function added

--- a/cart.html
+++ b/cart.html
@@ -20,12 +20,11 @@
 			</div>
 		</div>
 
-		<script src="products.js"></script>
 		<script>
 			function initializeCart() {
 				// Clear the localstorage
 				// localStorage.clear();
-				console.log(products);
+				//console.log(products);
 
 				// Define initial cart items
 				const initialCart = [
