--- a/product_page.html
+++ b/product_page.html
@@ -19,33 +19,71 @@
 			</div>
 		</div>
 
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-		<script src="products.js"></script>
 		<script>
 			document.addEventListener('DOMContentLoaded', function () {
-				const productList = document.getElementById('product-list');
-				for (const product of products) {
-					const card = document.createElement('div');
-					card.classList.add('col-lg-3', 'col-md-4', 'col-sm-6', 'mb-4'); // Adjusted column classes
+				fetch('products.json')
+					.then((response) => response.json())
+					.then((data) => {
+						const productList = document.getElementById('product-list');
+						data.forEach((product) => {
+							const card = document.createElement('div');
+							card.classList.add('col-lg-3', 'col-md-4', 'col-sm-6', 'mb-4'); // Adjusted column classes
 
-					card.innerHTML = `
-                    <div class="card h-100"> <!-- Ensure cards are of equal height -->
-                        <img src="${product.image}" class="card-img-top" alt="${
-						product.name
-					}">
-                        <div class="card-body"> <!-- Use flexbox for vertical alignment -->
-                            <h5 class="card-title">${product.name}</h5>
-                            <p class="card-text">${product.description}</p>
-                            <p class="card-text font-weight-bold">$${product.price.toFixed(
-															2
-														)}</p>
-                            <a href="#" class="btn btn-primary">Add to Cart</a>
-                        </div>
-                    </div>
-                `;
-					productList.appendChild(card);
-				}
+							card.innerHTML = `
+                            <div class="card h-100"> <!-- Ensure cards are of equal height -->
+                                <img src="${
+																	product.image
+																}" class="card-img-top" alt="${product.name}">
+                                <div class="card-body"> <!-- Use flexbox for vertical alignment -->
+                                    <h5 class="card-title">${product.name}</h5>
+                                    <p class="card-text">${
+																			product.description
+																		}</p>
+                                    <p class="card-text font-weight-bold">$${product.price.toFixed(
+																			2
+																		)}</p>
+                                    <div class="d-flex align-items-center">
+                                        <input type="number" class="quantity-input" value="1" min="1">
+                                        <a href="#" class="btn btn-primary add-to-cart" data-product='${JSON.stringify(
+																					product
+																				)}'>Add to Cart</a>
+                                    </div>
+                                </div>
+                            </div>
+                        `;
+							productList.appendChild(card);
+						});
+
+						document.querySelectorAll('.add-to-cart').forEach((button) => {
+							button.addEventListener('click', (event) => {
+								event.preventDefault();
+								const product = JSON.parse(
+									event.target.getAttribute('data-product')
+								);
+								const quantityInput = event.target.previousElementSibling;
+								const quantity = parseInt(quantityInput.value);
+								addToCart(product, quantity);
+							});
+						});
+					})
+					.catch((error) => console.error('Error fetching products:', error));
 			});
+
+			function addToCart(product, quantity) {
+				let cart = JSON.parse(localStorage.getItem('cart')) || [];
+				const existingProduct = cart.find((item) => item.name === product.name);
+				if (existingProduct) {
+					existingProduct.quantity += quantity;
+				} else {
+					product.quantity = quantity;
+					cart.push(product);
+				}
+				localStorage.setItem('cart', JSON.stringify(cart));
+				alert('Product added to cart!');
+			}
 		</script>
 	</body>
 </html>
